Add Presto and Postgresql support