@@ -5,3 +5,5 @@
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+ExitOnOutOfMemoryError
+-Djdk.attach.allowAttachSelf=true
+-Duser.timezone=UTC
